# object_definer

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/object_definer/: InteractiveObject.h  OwlIndividual.h
src/: InteractiveObject.cpp  OwlIndividual.cpp  node.cpp
